examples/datalog/14_aggregations/40_multi_agg_same_group.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_multi_agg
Knowledge graph 'test_multi_agg' created.
Switched to knowledge graph: test_multi_agg
> .kg use test_multi_agg
Switched to knowledge graph: test_multi_agg
> +sales[("A", 100), ("A", 200), ("A", 150), ("B", 300), ("B", 100)].
Inserted 5 fact(s) into 'sales'.
> sum_by_cat(Cat, <SUM:Val>) :- sales(Cat, Val).
Script error: Parse error: Unknown aggregate function: 
